# WeChatFerry

WeChatFerry/com/: util.cpp  util.h
WeChatFerry/sdk/: CMakeLists.txt  sdk.cpp  sdk.h
clients/python/wcferry/: client.py
connector/: .gitignore  README.md  pyproject.toml
connector/config/: connector.yaml
connector/connector/: __init__.py  audit.py  cli.py  config.py  pipeline.py  prompts.py  redact.py  schemas.py  windowing.py  workers.py
connector/connector/exporters/: base.py
connector/connector/llm/: base.py  external.py  ollama.py  router.py
connector/connector/sources/: base.py
connector/connector/sources/feishu/: normalize.py  webhook.py
connector/connector/sources/slack/: normalize.py  webhook.py
connector/connector/sources/wechat/: adapter.py  normalize.py
connector/connector/storage/: dao.py  db.py  resolver.py  schema.sql
connector/tests/: conftest.py  test_config.py  test_pipeline_e2e.py  test_redact.py  test_resolver.py  test_sources_feishu.py  test_sources_slack.py  test_windowing.py
